Working product. The code compiles and works. Features are still needed.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_all_teams">AllTeamsActivity</string>
     <string name="title_activity_new_team">NewTeamActivity</string>
+
     <string-array name="touches_array">
         <item>0</item>
         <item>1</item>
@@ -17,5 +18,7 @@
         <item>Yellow</item>
         <item>Blue</item>
     </string-array>
+
+    <string name="title_activity_edit_team">EditTeamActivity</string>
 
 </resources>
